--- a/arch/arm/configs/C8666_defconfig
+++ b/arch/arm/configs/C8666_defconfig
@@ -45,7 +45,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -99,7 +99,7 @@ CONFIG_PANIC_TIMEOUT=0
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 CONFIG_SYSCTL_SYSCALL=y
-# CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -123,10 +123,9 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 CONFIG_VM_EVENT_COUNTERS=y
-# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
-# CONFIG_SLAB is not set
-CONFIG_SLUB=y
+CONFIG_SLAB=y
+# CONFIG_SLUB is not set
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_HAVE_OPROFILE=y
@@ -145,13 +144,14 @@ CONFIG_SECCOMP_FILTER=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
+CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 # CONFIG_MODULE_FORCE_UNLOAD is not set
-CONFIG_MODVERSIONS=y
+# CONFIG_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -291,9 +291,9 @@ CONFIG_MSM_VIC=y
 # CONFIG_MACH_MSM7X27A_RUMI3 is not set
 CONFIG_MACH_MSM7X27A_SURF=y
 # CONFIG_MACH_MSM7X27A_FFA is not set
-CONFIG_MACH_MSM7625A_SURF=y
+# CONFIG_MACH_MSM7625A_SURF is not set
 # CONFIG_MACH_MSM7625A_FFA is not set
-CONFIG_MACH_MSM7627A_QRD1=y
+# CONFIG_MACH_MSM7627A_QRD1 is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x00200000
 CONFIG_MSM_AMSS_VERSION=6225
@@ -362,7 +362,7 @@ CONFIG_ADSP_RPC_VER=0x30002
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_ADSP_REPORT_EVENTS=y
-CONFIG_RTAC=y
+# CONFIG_RTAC is not set
 CONFIG_MSM7X27A_AUDIO=y
 CONFIG_MSM_PROC_COMM_REGULATOR=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
@@ -476,7 +476,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ=100
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
-# CONFIG_OABI_COMPAT is not set
+CONFIG_OABI_COMPAT=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
@@ -491,8 +491,7 @@ CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
-CONFIG_COMPACTION=y
-CONFIG_MIGRATION=y
+# CONFIG_COMPACTION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
@@ -571,6 +570,8 @@ CONFIG_CPU_FREQ_MSM=y
 #
 # At least one emulation must be selected
 #
+# CONFIG_FPE_NWFPE is not set
+# CONFIG_FPE_FASTFPE is not set
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
@@ -903,7 +904,7 @@ CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_IBS=y
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
-CONFIG_BT_MSM_SLEEP=y
+# CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
@@ -990,7 +991,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_HMC6352 is not set
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
-# CONFIG_UID_STAT is not set
+CONFIG_UID_STAT=y
 # CONFIG_BMP085 is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
@@ -1118,8 +1119,11 @@ CONFIG_PPPOE=y
 CONFIG_PPTP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
-# CONFIG_SLIP is not set
+CONFIG_SLIP=y
+CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLHC=y
+# CONFIG_SLIP_SMART is not set
+# CONFIG_SLIP_MODE_SLIP6 is not set
 # CONFIG_NETCONSOLE is not set
 CONFIG_MSM_RMNET=y
 # CONFIG_MSM_RMNET_DEBUG is not set
@@ -1240,7 +1244,8 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM=y
 CONFIG_SERIAL_MSM_CONSOLE=y
 CONFIG_SERIAL_MSM_HS=y
-# CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
+CONFIG_SERIAL_MSM_CLOCK_CONTROL=y
+# CONFIG_SERIAL_MSM_RX_WAKEUP is not set
 # CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_BCM_BT_LPM is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
@@ -1657,7 +1662,7 @@ CONFIG_MSM_KGSL=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
-# CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
+CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -1692,7 +1697,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
 # CONFIG_FB_MSM_LOGO is not set
 CONFIG_FB_MSM_LCDC_HW=y
-CONFIG_FB_MSM_TRIPLE_BUFFER=y
+# CONFIG_FB_MSM_TRIPLE_BUFFER is not set
 # CONFIG_FB_MSM_MDP22 is not set
 CONFIG_FB_MSM_MDP30=y
 CONFIG_FB_MSM_MDP303=y
@@ -2132,7 +2137,10 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
-# CONFIG_ANDROID_RAM_CONSOLE is not set
+CONFIG_ANDROID_RAM_CONSOLE=y
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
+# CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION is not set
+# CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -2140,9 +2148,8 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_XVMALLOC=y
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_XVMALLOC is not set
+# CONFIG_ZRAM is not set
 # CONFIG_ZCACHE is not set
 CONFIG_QCACHE=y
 # CONFIG_FB_SM7XX is not set
@@ -2202,7 +2209,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
-# CONFIG_DNOTIFY is not set
+CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 CONFIG_FANOTIFY=y
 # CONFIG_QUOTA is not set
@@ -2326,7 +2333,7 @@ CONFIG_DEFAULT_MESSAGE_LOGLEVEL=2
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=1024
-CONFIG_MAGIC_SYSRQ=y
+# CONFIG_MAGIC_SYSRQ is not set
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_DEBUG_FS=y
@@ -2334,7 +2341,6 @@ CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 # CONFIG_DEBUG_KERNEL is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
-# CONFIG_SLUB_STATS is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_STACKTRACE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
